# ancse

./: CMakeLists.txt
Examples/: CMakeLists.txt  Lshape_Dirichlet.cpp  Lshape_Neumann.cpp  Lshape_PCG.cpp  Lshape_pointerror.cpp  capacitor_Dirichlet.cpp  capacitor_Neumann.cpp  capacitor_indirect.cpp  capacitor_pointerror.cpp  lshape_adaptive_plot.cpp  manufactured_Dirichlet.cpp  meshRefineTest.cpp  mesh_capacitor.cpp  test.cpp  test_build.cpp
